Fix paragraph spacing, and .note and kbd styles

--- a/src/index.global.css
+++ b/src/index.global.css
@@ -114,3 +114,23 @@ pre, :not(pre) > code {
 code {
   white-space: pre-wrap;
 }
+ul p {
+    margin: 0;
+}
+.note {
+    background-color: rgba(0,0,0,.75);
+    color: #fff;
+    padding: .25rem .5rem;
+}
+kbd {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.2);
+    display: inline-block;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 11px;
+    font-weight: 300;
+    line-height: 1.4;
+    margin: 0 .2em;
+    padding: .1em .5em;
+}
